                CHANGES IN TraMineRextras VERSION 0.7.9 [2024-03-19]
                
Misc.:
    o   No changes.
    

                CHANGES IN TraMineRextras VERSION 0.6.8 [2024-03-17]
                
New function:
    o   dissCompare() comparison of two groups of data represented by 
        a pairwise dissimilarity matrix.
        
Bug fixes
    o   seqCompare() caused an error when only one group occurs in 
        one of the sets. Now returns NA for such sets.
    o   internal seq.comp() renamed as seqxcomp().
    o   missing package anchors for Rd link targets. 
                           
                
                CHANGES IN TraMineRextras VERSION 0.6.7 [2024-01-08]

Changes in existing functions:
    o   All TraMineRextras plot functions: improved support of 
        graphical parameters. (E.g., las and cex.axis can 
        now be used to control the display of tick labels.)
        
Bug fixes:
    o   seqimplic.Rd: lack of description for argument 'ylim'.
    o   seqpolyads(): time reported when core > 1 was not reliable.
    o   convert.g(): error when path=NULL.
    o   convert.g() adapted to changes in ImageMagick.
    

                CHANGES IN TraMineRextras VERSION 0.6.6 [2023-03-07]

New functions:
    o   dissindic() case indicators to select observations that are typical, atypical, 
	    illustrative of or counterexample of a statistical association between trajectories 
		and a covariate/typology.

Changes in existing functions:
    o   seqsplot(), argument `axes` is deprecated and replaced by `xaxis`.
        Argument `yaxis` can now also be one of "all" or "left".
    o   seqsplot(), ylab can be a vector of labels by group level.
    o   seqsplot() supports arguments of legend among the ... list.
    o   plot.stslist.surv(), plot method for objects returned by seqsurv displays
        the ylab closer from the y-axis when yaxis=FALSE. It also recognizes the `cex.lab` argument.