@@ -1,11 +1,12 @@
 \name{NEWS}
 \title{NEWS file of the TraMineRextras package}
 
-\section{Changes in version 0.7.9 [2024-08-19] }{
-    \subsection{Misc.}{
+\section{Changes in version 0.7.9 [2025-02-24] }{
+
+    \subsection{Changes in existing functions}{
         \itemize{
             \item
-            No changes
+            \code{seqCompare()} and \code{dissCompare()} gains logical argument \code{inc.df} to control whether the degrees of freedom of the LRT returned should be included in the table. In addition, In case of multiple samples, i.e., when \code{s} is not zero but smaller than the number of cases of the most frequent category, the returned LRT is now the sum of the individual LRTs (previously was the average) and its associated chi-square p-value is obtained with the corresponding degrees of freedom.
         }
     }
 }
